[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/StartGameMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/godiva-reguler.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/NumberOfPlayers.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=3]
size = 120
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=10]
size = 60
font_data = ExtResource( 2 )

[node name="StartGameMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="StartMenuBackground" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.439216, 0.431373, 0.321569, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="TitleMargin" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 358.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 80

[node name="Title" type="Label" parent="VBoxContainer/TitleMargin"]
margin_top = 97.0
margin_right = 1280.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 3 )
text = "Super Trunfo
Sustentabilidade"
align = 1
autowrap = true

[node name="OptionMargin" type="MarginContainer" parent="VBoxContainer"]
margin_top = 362.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OptionButtons" type="VBoxContainer" parent="VBoxContainer/OptionMargin"]
margin_right = 1280.0
margin_bottom = 358.0
custom_constants/separation = 30
alignment = 1

[node name="PlayersTitleMargin" type="MarginContainer" parent="VBoxContainer/OptionMargin/OptionButtons"]
margin_left = 345.0
margin_right = 935.0
margin_bottom = 99.0
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/OptionMargin/OptionButtons/PlayersTitleMargin"]
margin_top = 29.0
margin_right = 590.0
margin_bottom = 69.0
size_flags_horizontal = 5
custom_fonts/font = SubResource( 11 )
text = "Selecione o n√∫mero de jogadores"

[node name="NumberOfPlayersMargin" type="MarginContainer" parent="VBoxContainer/OptionMargin/OptionButtons"]
margin_left = 575.0
margin_top = 129.0
margin_right = 704.0
margin_bottom = 189.0
size_flags_horizontal = 4
size_flags_vertical = 2
custom_constants/margin_left = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/OptionMargin/OptionButtons/NumberOfPlayersMargin"]
margin_right = 129.0
margin_bottom = 60.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 35

[node name="DecreasePlayersButton" type="Button" parent="VBoxContainer/OptionMargin/OptionButtons/NumberOfPlayersMargin/HBoxContainer"]
margin_right = 15.0
margin_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.952941, 0.796078, 0.423529, 1 )
custom_colors/font_color_pressed = Color( 0.831373, 0.686275, 0.345098, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "-"

[node name="ValueMargin" type="MarginContainer" parent="VBoxContainer/OptionMargin/OptionButtons/NumberOfPlayersMargin/HBoxContainer"]
margin_left = 50.0
margin_right = 81.0
margin_bottom = 60.0

[node name="NumberOfPlayers" type="Label" parent="VBoxContainer/OptionMargin/OptionButtons/NumberOfPlayersMargin/HBoxContainer/ValueMargin"]
margin_right = 31.0
margin_bottom = 60.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 10 )
text = "0"
align = 1
script = ExtResource( 3 )

[node name="IncreasePlayersButton" type="Button" parent="VBoxContainer/OptionMargin/OptionButtons/NumberOfPlayersMargin/HBoxContainer"]
margin_left = 116.0
margin_right = 129.0
margin_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color_hover = Color( 0.952941, 0.796078, 0.423529, 1 )
custom_colors/font_color_pressed = Color( 0.831373, 0.686275, 0.345098, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "+"

[node name="DecisionMargin" type="MarginContainer" parent="VBoxContainer/OptionMargin/OptionButtons"]
margin_left = 406.0
margin_top = 258.0
margin_right = 874.0
margin_bottom = 358.0
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/OptionMargin/OptionButtons/DecisionMargin"]
margin_right = 468.0
margin_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 120

[node name="ReturnButton" type="Button" parent="VBoxContainer/OptionMargin/OptionButtons/DecisionMargin/HBoxContainer"]
margin_right = 164.0
margin_bottom = 40.0
custom_colors/font_color_hover = Color( 0.952941, 0.796078, 0.423529, 1 )
custom_colors/font_color_pressed = Color( 0.831373, 0.686275, 0.345098, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Retornar"

[node name="ConfirmButton" type="Button" parent="VBoxContainer/OptionMargin/OptionButtons/DecisionMargin/HBoxContainer"]
margin_left = 284.0
margin_right = 468.0
margin_bottom = 40.0
custom_colors/font_color_hover = Color( 0.952941, 0.796078, 0.423529, 1 )
custom_colors/font_color_pressed = Color( 0.831373, 0.686275, 0.345098, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Confirmar"

[connection signal="pressed" from="VBoxContainer/OptionMargin/OptionButtons/NumberOfPlayersMargin/HBoxContainer/DecreasePlayersButton" to="VBoxContainer/OptionMargin/OptionButtons/NumberOfPlayersMargin/HBoxContainer/ValueMargin/NumberOfPlayers" method="_on_DecreasePlayersButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionMargin/OptionButtons/NumberOfPlayersMargin/HBoxContainer/IncreasePlayersButton" to="VBoxContainer/OptionMargin/OptionButtons/NumberOfPlayersMargin/HBoxContainer/ValueMargin/NumberOfPlayers" method="_on_IncreasePlayersButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionMargin/OptionButtons/DecisionMargin/HBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
